# rmathcalc

./: .gitignore  CMakeLists.txt  README.md
rmc/: CMakeLists.txt  app.cpp  app.h  main.cpp
rmcd/: CMakeLists.txt  main.cpp  math_calc_handler.cpp  math_calc_handler.h  primes.cpp  primes.h
tests/: CMakeLists.txt  math_test.cpp
tests/gtest/: CMakeLists.txt
thrift/: rmathcalc.thrift  rmathcalc.thrift.cmake
